feat: add cavern special ore content parity tranche 2